added symsys reqs shoing up on sysmsys major selection

--- a/app/assets/stylesheets/explore.css.scss
+++ b/app/assets/stylesheets/explore.css.scss
@@ -29,6 +29,7 @@
 	border: 1px solid purple;
 	margin-left: 50px;
 	margin-top: 50px;
+
 }
 
 .opt {
@@ -39,5 +40,15 @@
 	margin-left: 10px;
 	display: none;
 }
+
+.subBox {
+	border: 1px solid black;
+	height: 180px;
+	margin-top: 20px;
+	vertical-align: top;
+	display: none;
+
+}
+
 
 
