Added users and courses with many-to-many relationship, going to switch to login branch to set up profiles with logins, where each user has a set of classes taken and planned

--- a/app/views/explore/index.html.erb
+++ b/app/views/explore/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <div id="degreeBox">
 	Degree
 
@@ -29,7 +27,7 @@
 
 
 	<div class = "bigBox">
-		<%= @major.name %>
+		<%= link_to @major.name, :action => :major %>
 		<button type="button" onclick="ShowOptions(event, 'inline')">
 			Show Majors
 		</button>
