--- a/app/assets/stylesheets/explore.css.scss
+++ b/app/assets/stylesheets/explore.css.scss
@@ -32,6 +32,14 @@
 
 }
 
+.soloBox {
+	width: 1500px;
+	height: 1500px;
+	border: 3px solid orange;
+	margin: 50px;
+	//display: none;
+}
+
 .opt {
 	width: 80px;
 	height: 30px;
@@ -47,8 +55,15 @@
 	margin-top: 20px;
 	vertical-align: top;
 	display: none;
-
 }
 
+#fullBulletList {
+	display: none;
+}
+
+.allOptionsList {
+	display: none;
+	border: 2px dashed red;
+}
 
 
