--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,13 @@
 
 	<body>
 		<div class="head">
-			<span class="hd1"><%= link_to "A website has appeared! Enjoy", {:controller => :users, :action => :index}, :class=>:hd1 %></span>
+			<span class="hd1"><%= link_to "A website has appeared! Enjoy", {:controller => :explore, :action => :index}, :class=>:hd1 %></span>
 			<% if @loggedIn %>
 				<span class="hd3"><%= link_to "Logout", {:controller => :users, :action => :logout}, :class=>:hd4 %></span>
-				<span class="hd2">Hi <%= @usr.name + "!" %></span>
+				<span class="hd2">Hi <%= link_to @usr.name + "!", {:controller => :users, :action => :index}, :class=>:hd4 %></span>
 			<% else %>
-				<!-- <span class="hd3"><%= link_to "Login", {:controller => :users, :action => :login}, :class=>:hd4 %></span> -->
+				<span class="hd3"><%= link_to "Login", {:controller => :users, :action => :login}, :class=>:hd4 %></span>
 			<% end %>
-			<!-- <span class="hd3"><%= link_to "Major ", {:controller => :explore, :action => :major} %></span> -->
 			
 		</div>
 		<%= yield %>
