--- a/app/assets/stylesheets/explore.css.scss
+++ b/app/assets/stylesheets/explore.css.scss
@@ -30,23 +30,6 @@
 	margin-top: 50px;
 }
 
-.bigBox {
-	width: 80%;
-	border: 3px solid purple;
-	border-radius: 5px;
-	margin-left: 50px;
-	margin-top: 50px;
-
-}
-
-.soloBox {
-	width: 1500px;
-	height: 1500px;
-	border: 3px solid orange;
-	margin: 50px;
-	//display: none;
-}
-
 .opt {
 	width: 80px;
 	height: 30px;
@@ -56,18 +39,6 @@
 	display: none;
 }
 
-.subBox {
-	border: 1px solid black;
-	height: 180px;
-	margin-top: 20px;
-	vertical-align: top;
-	display: none;
-}
-
-.allOptionsList {
-	display: none;
-	border: 2px dashed red;
-}
 
 .req1{
 
@@ -80,7 +51,7 @@
 
 
 	vertical-align: middle;
-	//display: inline-block; not sure
+	//display: inline; not sure
 
 	.course_label {
 		display: inline-block;
