--- a/app/views/explore/index.html.erb
+++ b/app/views/explore/index.html.erb
@@ -1,74 +1,4 @@
 <div id="content">
 	<h2><%= @root.name %></h2>
-
-	<% @root.reqs.each do |req1| %>
-		<div class="wrapper" id="<%= req1.id %>">
-			<% if @visit %>
-				<% status = "visitor" %>
-			<% else %>
-				<% status = req1.status(@viewer) %>
-			<% end %>
-			
-			<div id="first-req1-<%= req1.id %>" class="small req1 first <%= status %>">
-				<%= req1.name %>
-			</div>
-			
-			<div class="second" id="second-req1-<%= req1.id %>">
-				<table cellspacing="none">
-					<tr>
-						<td class="thirty">
-							<span id="big-req1-<%= req1.id %>" class="big req1 <%= status %>">
-								<%= req1.name %>
-							</span>
-						</td>
-						<td>
-							<span class="opt1">
-								<table id="orc">
-									<% orc = req1.getORCTable %>
-									<% first = true %>
-									<% orc.each do |vrow| %>
-										<tr>
-											<% if first %>
-
-												<% vrow.each do |d| %>
-													<th><%= d.name %></th>
-												<% end %>
-
-												<% first = false %>										
-											<% else %>
-												<% vrow.each do |d| %>
-													<% if !(d=="nll") %>
-														<% if @visit %>
-															<td class="req1 visitor"><%= d.name %></td>
-														<% else %>
-															<td class="req1 <%= d.status(@viewer) %>">
-
-	<!-- 															<div class="req1 <%= d.status(@viewer) %>">
-																	<span class="course_label"><%= d.name %></span>
-																	<span class="add_drop">
-																		<% if d.status(@viewer)=="completed" %>
-																			-
-																		<% else %>
-																			+
-																		<% end %>
-																	</span>												
-																</div>  -->
-																<%= d.name %>
-															</td>
-														<% end %>
-													<% else %>
-														<td></td>
-													<% end %>
-												<% end %>
-											<% end %>
-										</tr>
-									<% end %>
-								</table>
-							</span>
-						</td>
-					</tr>
-				</table>
-			</div>
-		</div>
-	<% end %>
+	<%= render partial: "zip", locals: {root: @root} %>
 </div>
