Added real classes and chunks

--- a/app/views/users/_course.html.erb
+++ b/app/views/users/_course.html.erb
@@ -2,7 +2,7 @@
 <% status = done ? "completed" : "todo" %>
 
 <div class="req1 <%= status %>">
-	<span class="course_label"><%= course.dept %></span>
+	<span class="course_label"><%= course.name %></span>
 	<span class="add_drop">
 		<% if done %>
 			-
