Chunks are now colored based on completion, as are the lines under options

--- a/app/views/explore/_orc.html.erb
+++ b/app/views/explore/_orc.html.erb
@@ -5,7 +5,7 @@
 		<tr>
 			<% if first %>
 				<% vrow.each do |d| %>
-					<th><%= d.name %></th>
+					<th class="<%= @visit ? "visitor" : d.status(@viewer)%>"><%= d.name %></th>
 				<% end %>
 
 				<% first = false %>										
