--- a/app/assets/stylesheets/explore.css.scss
+++ b/app/assets/stylesheets/explore.css.scss
@@ -7,7 +7,15 @@
 	th {
 		font-size: 1.5em;
 		color: purple;
-		border-bottom: 3px solid #FF6666;
+	}
+	th.todo {
+		border-bottom: 3px solid #FF6666; // red
+	}
+	th.completed {
+		border-bottom: 3px solid #85E085; // green
+	}
+	th.visitor {
+		border-bottom: 3px solid #F2ECC2; // cream
 	}
 	td {
 		//color: blue;
