Changed style on homepage and limited search to non-ajax

--- a/app/assets/stylesheets/explore.css.scss
+++ b/app/assets/stylesheets/explore.css.scss
@@ -143,17 +143,17 @@
 
 .majorLink {
 	margin: 20px;
-	color: black;
-	background: #C0C0C0;
-	border: 2px solid black;
+	color: blue;
+	//background: #C0C0C0;
+	//border: 2px solid black;
 	font-size: 1.5em;
 	font-weight: bold;
 	a:visited {
-		color: black;
+		color: blue;
 		text-decoration: none;
 	}
 	a:link {
-		color: black;
+		color: blue;
 		text-decoration: none;
 	}
 	a {
